--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ ffix = "ffix:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "isort>=6.0.1",
+    "ruff>=0.11.6",
+]
