--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.12"
 dependencies = []
 
 [project.scripts]
-ffix = "ffix:main"
+ffix = "ffix.cli:main"
 
 [build-system]
 requires = ["hatchling"]
