--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,16 @@
 [project]
 name = "ffix"
 version = "0.0.1"
-description = ""
+description = "Remux video files using ffmpeg"
 readme = "README.md"
+license = { file = "LICENSE" }
+keywords = ["video", "ffmpeg", "cli", "remux", "codec"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
 authors = [
     { name = "aillt", email = "aillt2@proton.me" }
 ]
